--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,7 +7,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     body {
-        background-image: url('/images/31496582_s.jpg');
+        background-image: url('/images/31314574_l.jpg');
         background-size: cover;
         background-position: center;
         background-attachment: fixed;
