--- a/src/main/resources/templates/machine-list.html
+++ b/src/main/resources/templates/machine-list.html
@@ -108,7 +108,7 @@
         </div>
         <div class="form-group">
           <label for="model" class="form-label">型式</label>
-          <input type="text" id="model" name="model" class="form-control" placeholder="例: ZX200-5G">
+          <input type="text" id="model" name="modelParam" class="form-control" placeholder="例: ZX200-5G">
         </div>
       </div>
 
