一覧ページのリンク修正

--- a/src/main/resources/templates/machine-list.html
+++ b/src/main/resources/templates/machine-list.html
@@ -137,7 +137,7 @@
 
   <!-- 操作ボタンを枠外に配置 -->
   <div class="d-flex justify-content-between mb-3">
-    <a href="/" class="btn btn-secondary">トップページに戻る</a>
+    <a href="/machines" class="btn btn-secondary">機材一覧ページに戻る</a>
     <a href="/machines/new" class="btn btn-primary">新規登録</a>
   </div>
 
