--- a/src/main/resources/templates/machine-list.html
+++ b/src/main/resources/templates/machine-list.html
@@ -95,7 +95,7 @@
 <div class="container mt-5">
   <h1 class="mb-4">機材一覧</h1>
 
-  <div class="d-flex justify-content-center mb-4">
+  <div class="d-flex justify-content-start mb-4">
     <a href="/" class="btn btn-outline-primary btn-lg">
       <!-- 家のアイコンを追加 -->
       <i class="bi bi-house-door"></i> トップページに戻る
