デザイン修正

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -77,8 +77,11 @@
 <!-- 「ゲストログインはこちら」ボックス -->
 <div class="content-box">
   <h1 class="header-title">レンタル重機管理システム</h1>
-  <p class="subtext">重機のステータスを簡単管理！</p>
-  <a href="/machines" class="btn btn-custom">機材一覧はこちらから</a>
+  <p class="subtext">一元管理で現場の業務を最適化！</p>
+  <div class="d-flex justify-content-center gap-3">
+    <a href="/machines" class="btn btn-custom">機材情報はこちらから</a>
+    <a href="/machines/new" class="btn btn-custom">機材登録</a>
+  </div>
 </div>
 </body>
 </html>
