--- a/src/main/resources/templates/machine-list.html
+++ b/src/main/resources/templates/machine-list.html
@@ -150,7 +150,7 @@
 
   <!-- 操作ボタンを枠外に配置 -->
   <div class="d-flex justify-content-between mb-3">
-    <a href="/machines" class="btn btn-secondary">機材一覧ページに戻る</a>
+    <a href="/machines" class="btn btn-secondary">機材一覧に戻る</a>
   </div>
 
   <!-- 機材一覧をカード枠で囲む -->
